--- a/Assign1/css/style.css
+++ b/Assign1/css/style.css
@@ -1,4 +1,5 @@
 *{
+    box-sizing: border-box;
     margin:0;
     padding:0;
 }
@@ -6,7 +7,7 @@
 .page{
     position:relative;
     width: 100%;
-    height:100vh;
+    height:105vh;
     background-color: rgb(0, 0, 0);
     margin-top: 0;
 }
@@ -73,6 +74,7 @@ p>span{
     position:absolute;
     top:110px;
     right:10px;
+    height: 500px;
 }
 
 div>img{
@@ -101,6 +103,7 @@ div>img{
         position:unset;
         margin:0px auto;
         padding-top: 100px;
+        height: 430px;
     }
 
     .text{
