--- a/Assign1/css/style.css
+++ b/Assign1/css/style.css
@@ -4,16 +4,17 @@
     padding:0;
 }
 
+body{
+    background-color: rgb(0, 0, 0);
+}
 .page{
     position:relative;
     width: 100%;
-    height:105vh;
-    background-color: rgb(0, 0, 0);
     margin-top: 0;
 }
 
 nav{
-    background-color: rgba(221, 6, 6, 0.644);
+    background-color: rgba(22, 1, 2, 0.925);
     display:flex;
     width:100%;
     margin:auto;
@@ -37,7 +38,7 @@ nav ul li {
 
 nav ul li a{
     text-decoration: none;
-    color: aqua;
+    color: rgb(10, 85, 224);
     font-weight:bold;
 }
 
@@ -45,14 +46,31 @@ nav ul li a:hover {
     color:red
 }
 
+.image {
+    box-sizing: border-box;
+    position:absolute;
+    top:150px;
+    right:10px;
+    margin:10px;
+    opacity: 0.7;
+}
 
+div>img{
+    width:320px;
+    height: 320px;
+    border-radius: 35%;   
+    box-sizing: border-box;
+    box-shadow: 5px 10px 5px rgb(226, 13, 6) ;
+    margin:10px auto;
+}
 .text{
-    width:50%;
+    box-sizing: border-box;
     position:absolute;
     left:0;
     color:aquamarine;
     text-align: center;
     margin-top: 250px;
+    margin-left: 10px;
 }
 
 h1>span{
@@ -66,64 +84,32 @@ p{
 
 p>span{
     font-weight: bold;
-}
-
-
-.image {
-    width:40%;
-    position:absolute;
-    top:110px;
-    right:10px;
-    height: 500px;
-}
-
-div>img{
-    width:90%;
-    border-radius: 75%;
-    border:1px solid rgb(233, 199, 10);
-    box-sizing: border-box;
-    box-shadow: 5px 10px 5px rgb(226, 204, 6) ;
-
+    font-size: x-large;
 }
 
 .reply{
-    color:red;
+    color:beige;
     font-weight: bold;
     margin-top: 20px;
 }
-@media (max-width:953px) {
-    .page{
-        margin-top: 0;
-        height:120vh;
-    }
-    .image{
-        width:50%;
-        display:block;
-        float:top;
-        position:unset;
-        margin:0px auto;
-        padding-top: 100px;
-        height: 430px;
-    }
 
+@media (max-width:768px) {
+    .image{
+        top:100px;
+        left: 15%;
+    }
     .text{
-        margin-top: 20px;
-        width:90%;
-        display:block;
-        position:unset;
+        top:300px;
     }
     
-
 }
 
-@media (max-width:676px) {
-    .page{
-        height: 110vh;
+@media (max-width:576px) {
+    .image{
+        margin: auto;
     }
-    .text{
-        margin-top: 30px;
+    div>img{
+        width:280px;
+        height: 280px;
     }
 }
-
-
-
