--- a/Assign1/css/style.css
+++ b/Assign1/css/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 nav{
-    background-color: rgba(22, 1, 2, 0.925);
+    background-color: rgba(46, 1, 3, 0.904);
     display:flex;
     width:100%;
     margin:auto;
@@ -33,7 +33,7 @@ nav img{
 nav ul li {
     display:inline-block;
     list-style:none;
-    margin: 10px 20px;
+    margin: 10px 15px;
 }
 
 nav ul li a{
@@ -52,7 +52,7 @@ nav ul li a:hover {
     top:150px;
     right:10px;
     margin:10px;
-    opacity: 0.7;
+    
 }
 
 div>img{
@@ -60,8 +60,9 @@ div>img{
     height: 320px;
     border-radius: 35%;   
     box-sizing: border-box;
-    box-shadow: 5px 10px 5px rgb(226, 13, 6) ;
+    box-shadow: 5px 10px 5px rgb(235, 13, 5) ;
     margin:10px auto;
+    opacity: 0.9;
 }
 .text{
     box-sizing: border-box;
@@ -106,7 +107,8 @@ p>span{
 
 @media (max-width:576px) {
     .image{
-        margin: auto;
+        left: 0;
+        margin-left: 45px;
     }
     div>img{
         width:280px;
