--- a/Assign1/css/style.css
+++ b/Assign1/css/style.css
@@ -14,14 +14,16 @@ body{
 }
 
 nav{
-    background-color: rgba(46, 1, 3, 0.904);
+    background-color: rgba(199, 50, 57, 0.904);
     display:flex;
-    width:100%;
     margin:auto;
     padding:20px 0;
     align-items:center;
     justify-content: space-between;
     position: fixed;
+    top: 0px;
+    width:100%;
+
 }
 
 
@@ -43,7 +45,7 @@ nav ul li a{
 }
 
 nav ul li a:hover {
-    color:red
+    color:rgb(0, 255, 42)
 }
 
 .image {
@@ -62,7 +64,7 @@ div>img{
     box-sizing: border-box;
     box-shadow: 5px 10px 5px rgb(235, 13, 5) ;
     margin:10px auto;
-    opacity: 0.9;
+    opacity: 0.85;
 }
 .text{
     box-sizing: border-box;
