--- a/Assign1/css/style.css
+++ b/Assign1/css/style.css
@@ -1,55 +1,49 @@
-*{
+*,
+*:before,
+*:after{
     box-sizing: border-box;
     margin:0;
     padding:0;
 }
 
 body{
-    background-color: rgb(0, 0, 0);
-}
-.page{
-    position:relative;
-    width: 100%;
-    margin-top: 0;
+    background-color: rgb(255, 255, 255);
 }
 
-nav{
-    overflow: hidden;
-    display:flex;
-    margin:auto;
-    padding:20px 0;
-    align-items:center;
+
+
+.nav{
+    background-color: rgba(0,0,0,0.3);
+    text-align: center;
+    display: flex;
     justify-content: space-between;
     position: fixed;
-    top: 0px;
+    top: 0;
     width:100%;
-
+    backdrop-filter: blur(1px);
 }
 
-
-nav img{
-    width: 50px;
-    border-radius: 50%;
+nav ul{
+    list-style: none;
 }
 
-nav ul li {
+.nav-item{
     display:inline-block;
-    list-style:none;
-    margin: 10px 15px;
+    margin-left: 20px;
+    color:aqua
 }
 
-nav ul li a{
+.nav-link{
+    display:inline-block;
     text-decoration: none;
-    color: rgb(10, 85, 224);
-    font-weight:bold;
+    letter-spacing: 1px;
 }
 
-nav ul li a:hover {
-    color:rgb(0, 255, 42)
+.nav-link:hover{
+    color: rgb(247, 0, 0);
 }
 
 .image {
-    box-sizing: border-box;
     position:absolute;
     top:150px;
     right:10px;
@@ -65,14 +59,15 @@ div>img{
     box-shadow: 5px 10px 5px rgb(235, 13, 5) ;
     margin:10px auto;
     opacity: 0.85;
+    padding:0px auto;
 }
 .text{
     box-sizing: border-box;
     position:absolute;
     left:0;
-    color:aquamarine;
+    color:rgb(0, 0, 0);
     text-align: center;
-    margin-top: 250px;
+    margin-top: 200px;
     margin-left: 10px;
     line-height: 1em;
     
@@ -112,6 +107,9 @@ p>span{
 }
 
 @media (max-width:576px) {
+    .nav-link{
+        display: none;
+    }
     .image{
         left: 0;
         margin-left: 45px;
